--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@somosprte/eslint-config": "^1.8.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/styled-components": "^5.1.34",
     "typescript": "^5.3.3"
   },
   "browserslist": {
